@@ -320,7 +320,7 @@ my $builder = $class->new(
         'Pod::Usage'                             => 0,
         'Sort::Versions'                         => 0,
         'String::Similarity'                     => 0,
-        'Syntax::Highlight::Engine::Kate'        => 0,
+        'Syntax::Highlight::Engine::Kate'        => 0.07,
         'Template'                               => 0,
         'Template::Constants'                    => 0,
         'Term::ANSIColor'                        => 0,
@@ -367,7 +367,7 @@ my $builder = $class->new(
         'Pod::Usage'                             => 0,
         'Sort::Versions'                         => 0,
         'String::Similarity'                     => 0,
-        'Syntax::Highlight::Engine::Kate'        => 0,
+        'Syntax::Highlight::Engine::Kate'        => 0.07,
         'Template'                               => 0,
         'Template::Constants'                    => 0,
         'Term::ANSIColor'                        => 0,
