@@ -63,7 +63,7 @@
 					<para>
 						For example, to construct a Yahoo! search limited to <literal>docs.example.com</literal>, set:
 					</para>
-<programlisting language="HTML">search: '&lt;form target="_top" method="get" action="http://search.yahoo.com/search"&gt; &lt;div class="search"&gt; &lt;input type="text" name="p" value="" /&gt; &lt;input type="hidden" name="vs" value="docs.example.com" /&gt; &lt;input type="submit" value="###Search###" /&gt; &lt;/div&gt; &lt;/form&gt;'</programlisting>
+<programlisting language="html">search: '&lt;form target="_top" method="get" action="http://search.yahoo.com/search"&gt; &lt;div class="search"&gt; &lt;input type="text" name="p" value="" /&gt; &lt;input type="hidden" name="vs" value="docs.example.com" /&gt; &lt;input type="submit" value="###Search###" /&gt; &lt;/div&gt; &lt;/form&gt;'</programlisting>
 					<para>
 						Refer to the documentation of your chosen search engine for details of how to construct custom searches. 
 					</para>
