@@ -13,6 +13,7 @@
   - Fix epub DOCTYPE. BZ #875129
   - Fix step first child style. BZ #971221
   - Fix long link word wrap in PDF. BZ #923481
+  - Support case-insensitive "language" attribute. BZ #919474
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
